--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
-<head>
-<title>TheHemantKaushik</title>
-</head>
-
-<h1>Hello, Hemant Kaushik!</h1>
+  <head>
+    <title>TheHemantKaushik</title>
+  </head>
+  <body>
+    <h1>Hemant Kaushik!</h1>
+  </body>
 </html>
