--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
 
-  <head>
+<head>
     <title>TheHemantKaushik</title>
-  </head>
-  <body>
-    <h1>Hemant Kaushik!</h1>
-  </body>
+
+    <style>
+        body{
+            background-image: url('./background.png');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
+</head>
+
+<body>
+</body>
+
 </html>
