--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<html>
-
-<head>
-    <title>Hemant Kaushik</title>
-
-    <style>
-        body{
-            background-image: url('./background.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-            background-size: cover;
-        }
-    </style>
-</head>
-
-<body>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>Hemant Kaushiik</title><link href="/static/css/main.dd692c70.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.ccb96df0.js"></script></body></html>
